--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.30'
+    ext{
+        kotlin_version = '1.4.30'
+        navigation_version = '2.3.3'
+    }
     repositories {
         google()
         jcenter()
@@ -26,6 +29,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.5'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
     }
 }
 
